--- a/src/main/resources/html/websocket2.html
+++ b/src/main/resources/html/websocket2.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <script>
-      var wsObj = new WebSocket("ws://192.168.81.28:8082/socket/v2/anchor/zwcai"); //建立连接
+      var wsObj = new WebSocket("ws://192.168.81.28:8082/v1/anchor/test1"); //建立连接
       wsObj.onopen = function () {
         //发送请求
         alert("open");
